@@ -155,13 +155,9 @@ accordingly.
 
 # SUPPORT FOR OLDER PERL VERSIONS
 
-Since v0.8.0, the this module requires Perl v5.14 or later.
+Since v0.9.0, the this module requires Perl v5.20 or later.
 
 Future releases may only support Perl versions released in the last ten years.
-
-If you need this module on Perl v5.10, please use one of the v0.7.x
-versions of this module.  Significant bug or security fixes may be
-backported to those versions.
 
 # SEE ALSO
 
