@@ -2,12 +2,14 @@ package Catalyst::Plugin::Statsd;
 
 # ABSTRACT: Log Catalyst stats to statsd
 
-use v5.14;
+use v5.20;
 
 use Moose::Role;
 
 use POSIX qw/ ceil /;
 use Ref::Util qw/ is_plain_arrayref /;
+
+use experimental qw/ signatures /;
 
 # RECOMMEND PREREQ: Ref::Util::XS
 
@@ -77,8 +79,7 @@ This is the statsd client used by L<Plack::Middleware::Statsd>.
 
 =cut
 
-sub statsd_client {
-    my ($c) = @_;
+sub statsd_client($c) {
     return $c->req->env->{'psgix.monitor.statsd'};
 }
 
@@ -131,8 +132,7 @@ The metric name is generated by L</statsd_metric_name_filter>.
 
 =cut
 
-sub statsd_metric_name_filter {
-    my ($c, $stat) = @_;
+sub statsd_metric_name_filter( $c, $stat ) {
 
     return "$stat" unless is_plain_arrayref($stat);
 
@@ -142,8 +142,7 @@ sub statsd_metric_name_filter {
     return $metric;
 }
 
-around log_stats => sub {
-    my ( $next, $c ) = @_;
+around log_stats => sub ( $next, $c ) {
 
     state $config = $c->config->{'Plugin::Statsd'} // {};
 
@@ -171,8 +170,7 @@ around log_stats => sub {
     $c->$next unless $disabled;
 };
 
-around finalize => sub {
-    my ($next, $c) = @_;
+around finalize => sub ( $next, $c ) {
 
     if (my $client = $c->statsd_client) {
 
@@ -221,14 +219,9 @@ accordingly.
 
 =head1 SUPPORT FOR OLDER PERL VERSIONS
 
-Since v0.8.0, the this module requires Perl v5.14 or later.
+Since v0.9.0, the this module requires Perl v5.20 or later.
 
 Future releases may only support Perl versions released in the last ten years.
-
-If you need this module on Perl v5.10, please use one of the v0.7.x
-versions of this module.  Significant bug or security fixes may be
-backported to those versions.
-
 
 =head1 SEE ALSO
 
