@@ -1,6 +1,11 @@
 Revision history for Catalyst-Plugin-Statsd.
 
 {{$NEXT}}
+  [Enhancements]
+  - Internals changed to use newer Perl syntax features.
+
+  [Incompatible Changes]
+  - Perl v5.20 or later is required, matching Plack::Middleware::Statsd v0.7.0 changes.
 
 v0.8.2    2023-06-22 12:36:45+01:00 Europe/London
   [Tests]
